<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SumaActivity">

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:text="@string/lblcalcular"
        android:textColorHint="#0C0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnregresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2" />

    <TextView
        android:id="@+id/lblresult"
        android:layout_width="198dp"
        android:layout_height="0dp"
        android:layout_marginBottom="115dp"
        android:textColor="@color/black"
        android:textColorHint="#0C0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregresa" />

    <Button
        android:id="@+id/btnregresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/lblregresa"
        android:textColorHint="#0C0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lblresult"
        app:layout_constraintEnd_toEndOf="@+id/lblresult"
        app:layout_constraintTop_toBottomOf="@+id/btncalcular" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="19dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/hintnum1"
        android:inputType="number"
        android:shadowColor="#C50F0F"
        android:textColor="#DC1A1A"
        android:textColorHint="#9C2121"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/num1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnum1"
        app:layout_constraintEnd_toEndOf="@+id/lblresult"
        app:layout_constraintStart_toStartOf="@+id/btnregresa"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="58dp"
        android:text="@string/titulop1"
        android:textColor="#0B0909"
        android:textColorHint="#0C0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"

        android:layout_marginEnd="46dp"
        android:layout_marginBottom="26dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/hintnum2"
        android:inputType="number"
        android:textColor="#BA0606"
        android:textColorHint="#D32222"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btncalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/num2"
        android:textColor="#171515"
        android:textColorHint="#0C0A0A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />
</androidx.constraintlayout.widget.ConstraintLayout>